<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.ynpquiz.MainActivity">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">
            <RadioButton
                android:textColor="@color/textColorSecondary"
                android:id="@+id/answer1True"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/True"/>
            <RadioButton
                android:textColor="@color/textColorSecondary"
                android:id="@+id/answer1False"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/False"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">
            <RadioButton
                android:textColor="@color/textColorSecondary"
                android:id="@+id/answer2True"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/True"/>
            <RadioButton
                android:textColor="@color/textColorSecondary"
                android:id="@+id/answer2False"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/False"/>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question3" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp">
                <RadioButton
                    android:id="@+id/answer3RadioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer3Part1"
                    android:layout_weight="1" />
                <RadioButton
                    android:id="@+id/answer3RadioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer3Part2"
                    android:layout_weight="1"/>
                <RadioButton
                    android:id="@+id/answer3RadioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer3Part3"
                    android:layout_weight="1"/>
            </RadioGroup>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp">
                <RadioButton
                    android:id="@+id/answer4RadioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer4Part1"
                    android:layout_weight="1"/>
                <RadioButton
                    android:id="@+id/answer4RadioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer4Part2"
                    android:layout_weight="1"/>
                <RadioButton
                    android:id="@+id/answer4RadioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer4Part3"
                    android:layout_weight="1"/>
            </RadioGroup>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question5" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
            <CheckBox
                android:id="@+id/answer5CheckBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer5part1"
                android:layout_weight="1"/>
            <CheckBox
                android:id="@+id/answer5CheckBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer5part2"
                android:layout_weight="1"/>
            <CheckBox
                android:id="@+id/answer5CheckBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer5part3"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question6" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer6"
            android:hint="@string/hint1"
            android:inputType="numberDecimal"
            android:layout_margin="8dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_weight="1"/>
            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/button1"
                android:onClick="submit"
                android:layout_weight="1"
                android:layout_margin="8dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>